maintain: gragle 메모리 옵션 조